fix some spacing on the nav bar of the archive

--- a/www/archive/navStyles.css
+++ b/www/archive/navStyles.css
@@ -55,7 +55,7 @@ p {
 .header_title {
     margin: 0;
     position: absolute;
-    left: 45vw;
+    left: 40vw;
 
     margin-top: 5px;
 
